Source/bmalloc/bmalloc/Algorithm.h
@@ -134,9 +134,12 @@ template<typename T> constexpr T divideRoundingUp(T numerator, T denominator)
     return (numerator + denominator - 1) / denominator;
 }
 
-template<typename T> inline T roundUpToMultipleOfNonPowerOfTwo(size_t divisor, T x)
+inline size_t roundUpToMultipleOfNonPowerOfTwo(size_t divisor, size_t x)
 {
-    return divideRoundingUp(x, divisor) * divisor;
+    size_t remainder = x % divisor;
+    if (!remainder)
+        return x;
+    return x + (divisor - remainder);
 }
 
 // Version of sizeof that returns 0 for empty classes.
